# TeamNote

./: AhoCorasick.cpp  BCC.cpp  Bino-Coefficient.cpp  BinoCoefficient.cpp  BipartiteMatching  BipartiteMatching.cpp  CHT.cpp  Calendar.cpp  CentroidDecomposition.cpp  DSU  Dinic.cpp  FFT.cpp  Fenwick-2D.cpp  Fenwick.cpp  GCDX  Geometry  HLD  HLD.cpp  Harmonics.cpp  HilbertCurve.cpp  KMP  KMP.cpp  LCA  LazySegmentTree.cpp  MCMF.cpp  Manacher.cpp  Matrix  MaxFlow.cpp  MergeSortTree  MergeSortTree.cpp  MillerRabin.cpp  PST.cpp  PermIdx  PollardRho.cpp  Poww  README.cpp.md  README.md  Random  SA-LCP.cpp  SCC  (+15 more)
Algorithm/: AVL.cpp  Berlekamp-Kitamasa.cpp  CRT.cpp  DSU.cpp  Dinic.cpp  Fenwick.cpp  GCDX.cpp  Geometry.cpp  Harmonics.cpp  LCA.cpp  LCAO1.cpp  LinearSieve-Full.cpp  LinearSieve-Mobius.cpp  LinearSieve-Prime.cpp  Manacher.cpp  Matrix.cpp  MaxFlow.cpp  PST.cpp  PollardRho.cpp  SegmentTree-0-1.cpp  SplayTree-Array.cpp  SplayTree-BBST.cpp  Trie.cpp  Z.cpp
DevTemplate/: zx.mjs
Environment/: .bash_profile-windows  .bashrc-windows  .gitconfig  .zshrc-darwin  CMakeLists.txt  Interactive.cpp  SingleCase.cpp  TestCase.cpp  debug.h  lazygit  lazygit.yml
Utility/: BigInt.cpp  Bit.cpp  Calendar.cpp  DigitCount.cpp  Dir4.cpp  Dir8.cpp  Eval.cpp  FastIO.cpp  FileIO.cpp  Hash.cpp  Int128.cpp  Mod.cpp  PermutationIndex.cpp  Poww.cpp  Pragma.cpp  Print.cpp  Random.cpp  ReadInt.cpp  Rotate.cpp  String.cpp  TimeElapsed.cpp
